--- a/pom.xml
+++ b/pom.xml
@@ -57,6 +57,14 @@
             <version>3.5.5</version>
         </dependency>
 
+        <!-- https://www.minio.org.cn/docs/minio/linux/developers/minio-drivers.html#java-sdk -->
+        <dependency>
+            <groupId>io.minio</groupId>
+            <artifactId>minio</artifactId>
+            <version>8.5.9</version>
+        </dependency>
+
+
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-configuration-processor</artifactId>
