--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,17 +1,29 @@
 spring:
   application:
-    name: demo
-
+    name: user center
+#  session:
+#    timeout: 86400
+#    redis:
+#      flush-mode: on_save
+#      namespace: spring:session
   datasource:
     url: jdbc:mysql://localhost:3306/demo?useUnicode=true&characterEncoding=utf8&connectTimeout=3000&socketTimeout=30000
     username: root
     password: Wenrh240004
     driver-class-name: com.mysql.cj.jdbc.Driver
+  data:
+    redis:
+      host: localhost
+      port: 6379
+      database: 0
 
 server:
   port: 8888
   servlet:
     context-path: /api
+    session:
+      cookie:
+        domain: localhost
 
 mybatis-plus:
   configuration:
@@ -34,7 +46,7 @@ springdoc:
   group-configs:
     - group: 'default'
       paths-to-match: '/**'
-      packages-to-scan: com.example.demo.controller
+      packages-to-scan: com.winter_wonder_house.user_center.controller
 # knife4j的增强配置，不需要增强可以不配
 knife4j:
   enable: true
